[gd_scene load_steps=2 format=3 uid="uid://bc87sc3p2vx6"]

[ext_resource type="Script" path="res://Nodes/Spotter/Spotter.gd" id="1_w5tlb"]

[node name="Spotter" type="Node2D"]
rotation = 0.958186
script = ExtResource("1_w5tlb")
number_of_rays = 8

[node name="SightArea" type="Polygon2D" parent="."]

[connection signal="player_entered" from="." to="." method="_on_player_entered"]
[connection signal="player_exited" from="." to="." method="_on_player_exited"]
